# pythonrs

./: BUGS.md  CHECKLIST.md  Cargo.toml  FFI_STDLIB.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
completions/: _python
docs/: hud-static.css  index.html  reference.html  report.html
examples/: README.md  argparse_demo.py  bank_account.py  binary_tree.py  calculator.py  classes.py  closures.py  collections_demo.py  comprehensions.py  context_managers.py  csv_demo.py  dataclasses_demo.py  datetime_demo.py  decorators.py  dynamic_programming.py  enums_demo.py  exceptions.py  fibonacci.py  fizzbuzz.py  functional.py  generators.py  graphs.py  hashing.py  hello.py  inheritance.py  itertools_demo.py  json_demo.py  math_demo.py  matrix.py  operators.py  pattern_matching.py  recursion.py  regex_demo.py  sorting.py  state_machine.py  statistics_demo.py  strings.py  type_hints.py  wordcount.py  wordfreq.py
man/: python.1  pythonall.1
pylib/: _types.py  _weakref.py  types.py
scripts/: bundle-stdlib.sh  dropin_check.sh  install.sh
src/: aot.rs  aot_native.rs  ast.rs  async_rt.rs  banner.rs  builtins.rs  cache.rs  casefold.rs  cli.rs  compiler.rs  dap.rs  ffi.rs  host.rs  intercepts.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  repl.rs  rust_ffi.rs
src/extensions/: cacheview.rs  doctor.rs  mod.rs
src/stdlib/: bisect.rs  datetime.rs  functools.rs  heapq.rs  itertools.rs  json.rs  mod.rs  os.rs  random.rs  re.rs  statistics.rs  string.rs  textwrap.rs
tests/: augwith.rs  bytes_format.rs  dash_m.rs  eval.rs  ffi.rs  lang.rs  module_globals.rs  repl.rs  runtime.rs  stdlib.rs
tests/dropin/: argparse_cli.py  argv_echo.py  base64_roundtrip.py  collections_counter.py  collections_deque.py  csv_parse.py  data_dataclass.py  data_enum.py  datetime_basic.py  hashlib_digest.py  io_iter_lines.py  io_write_read.py  json_roundtrip.py  lang_arith_floor.py  lang_comprehensions.py  lang_fstring_fmt.py  lang_pow_mod.py  lang_sorting.py  lang_str_methods.py  lang_str_percent.py  os_glob.py  os_listdir.py  os_path_ops.py  pathlib_paths.py  re_extract.py  real_json_config.py  real_parse_log.py  real_wordfreq.py  subprocess_run.py  sys_exit_code.py
